[package]
name = "update-apt-sources-list-d"
version = "0.1.0"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.100"
reqwest = { version = "0.13.1", features = ["blocking"] }
log = "0.4.29"
env_logger = "0.11.8"
deb822-lossless = "0.5.7"
lsb_release = "0.1.0"
